Fix travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 bundler_args: --without development
 language: ruby
 rvm:
-  - 2.2
+  - 2.2.2
   - 2.3
+before_install: gem install bundler -v 1.11.2
