--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
-language: ruby
+osx_image: xcode7.3
+language: objective-c
+cache: bundler
 rvm:
-  - 2.1.2
-before_install: gem install bundler -v 1.11.2
+  - 2.2.2
+  - 2.3.1
+before_install: sudo gem install bundler -v 1.11.2
+script: bundle exec rake
