--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 osx_image: xcode7.3
 language: objective-c
 cache: bundler
-rvm:
-  - 2.2.2
-  - 2.3.1
+rvm: 2.3.1
 before_install: sudo gem install bundler -v 1.11.2
 script: bundle exec rake
